# differentiable-humanoid-dynamics

./: .gitignore  NOTICE.md  README.md  pyproject.toml
examples/: inspect_g1_dynamics.py  visualize_g1.py  visualize_g1_contacts.py
src/differentiable_humanoid_dynamics/: __init__.py  _torch.py  assets.py  contacts.py  dynamics.py  motion.py  urdf.py  visualization.py  walking.py
src/differentiable_humanoid_dynamics/assets/motions/g1_amass_retargeted/: cmu_06_01_poses_120_jpos.npz
src/differentiable_humanoid_dynamics/assets/motions/g1_fleaven_retargeted/: JOOF_walk_poses_120_jpos.npy
src/differentiable_humanoid_dynamics/assets/robots/unitree_g1/: g1_23dof_rev_1_0.adam.urdf  g1_29dof_mode_14.adam.urdf  g1_29dof_mode_15.adam.urdf
src/differentiable_humanoid_dynamics/cli/: __init__.py  check_adam_g1.py
src/differentiable_humanoid_dynamics/examples/: __init__.py  check_adam_g1.py
src/focodyn/: __init__.py  assets.py  contacts.py  dynamics.py  input_constraints.py  motion.py  visualization.py  walking.py
src/focodyn/assets/robots/unitree_g1/: g1_23dof_mode_10.adam.urdf  g1_29dof_lock_waist_rev_1_0.adam.urdf  g1_29dof_lock_waist_with_hand_rev_1_0.adam.urdf  g1_29dof_mode_11.adam.urdf  g1_29dof_mode_12.adam.urdf  g1_29dof_mode_13.adam.urdf  g1_29dof_mode_15_with_dex1_1.adam.urdf  g1_29dof_mode_16.adam.urdf  g1_29dof_rev_1_0.adam.urdf  g1_29dof_with_hand_rev_1_0.adam.urdf  (+4 more)
src/focodyn/cli/: __init__.py  check_adam_g1.py
tests/: test_assets.py  test_contacts.py  test_dynamics.py  test_input_constraints.py  test_motion.py  test_visualization.py  test_walking.py
